--- a/Anuradha.html
+++ b/Anuradha.html
@@ -50,7 +50,7 @@
 </head>
 <body>
     <header>
-        <h1>Assistant Professor Anuradha</h1>
+        <h1>Professor Anuradha</h1>
     </header>
     <nav>
         <a href="#about">About</a>
@@ -60,7 +60,7 @@
     <section id="about">
         <h2>About Me</h2>
         <p>
-            Welcome to my homepage! I am Assistant Professor Anuradha, and I teach [Subject] at [University/Institution]. 
+            Welcome to my homepage! I am an Professor Anuradha, and I teach [Subject] at [University/Institution]. 
             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam feugiat, quam nec gravida tincidunt, odio justo consectetur elit, eu cursus sapien lectus et libero.
         </p>
     </section>
@@ -84,7 +84,7 @@
         </p
     </section>
     <footer>
-        &copy; 2023 Assistant Professor Anuradha. All rights reserved.
+        &copy; 2023 Professor Anuradha. All rights reserved.
     </footer>
 </body>
 </html>
